More documentation, do more UI stuff, squash bugs, mow the lawn

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -160,10 +160,10 @@
     <div class="md-grid md-typeset">
         <div class="tx-hero">
             <div class="tx-hero__content">
-                <h1>Unlimited Roblox Animation</h1>
+                <h1>Unlimited Animation for Roblox</h1>
                 <p>{{ config.site_description }}</p>
                 <a href="{{ page.next_page.url | url }}" title="{{ page.next_page.title | e }}" class="md-button md-button--primary">
-                    Introduction
+                    Guide
                 </a>
             </div>
         </div>
